# xonsh

./: .appveyor.yml  .appveyor_install.cmd  .appveyor_test.cmd  .authors.yml  .binstar.yml  .circle.yml  .circle_miniconda.sh  .cirrus.yml  .coveragerc  .deepsource.toml  .gitattributes  .gitignore  .landscape.yaml  .mailmap  .pre-commit-config.yaml  .release-please-manifest.json  .travis.yml  1222.md  23.md  AI_POLICY.md  ANNOUNCE  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CLAUDE.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  FUNDING.yml  LICENSE  MANIFEST.in  Makefile  None  PR_DRAFT.md  README.md  README.rst  RELEASE.md  TODO  adsfund.json  (+42 more)
.ci/: Dockerfile.msys  docs-upload.xsh  docs.xsh
.ci/appveyor/: install.cmd
.circleci/: config.yml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  issue_template.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  new-issue.md
.github/scripts/: add-changelog-authors.py  update-nightly-release-descr.py
.github/workflows/: appimage.yml  black.yml  check-news-item.yml  check-news.py  check-pr-title.yml  docs-linux-3.8.yml  docs.yml  elm.yml  genbuilds.py  genbuilds.xsh  nightly-build.yml  publish.yml  pytest-linux-3.10.yml  pytest-linux-3.6.yml  pytest-linux-3.7.yml  pytest-linux-3.8.yml  pytest-linux-3.9.yml  pytest-linux.yml  pytest-macos-3.10.yml  pytest-macos-3.6.yml  pytest-macos-3.7.yml  pytest-macos-3.8.yml  pytest-macos-3.9.yml  pytest-macos.yml  pytest-windows-3.10.yml  pytest-windows-3.6.yml  pytest-windows-3.7.yml  pytest-windows-3.8.yml  pytest-windows-3.9.yml  pytest-windows.yml  pytest.tmpl  pytest.yml  qa-linux-3.10.yml  qa-linux-3.8.yml  qa-linux-3.9.yml  release-please.yml  test.yml  update-flake-lock.yml
appimage/: README.rst  entrypoint.sh  pre-requirements.txt  xonsh.appdata.xml  xonsh.desktop
benchmarks/: __init__.py  mem_suit.py  time_suit.py
ci/: condarc.yml  environment-3.4.yml  environment-3.5.yml  environment-3.6.yml  environment-3.7.yml  environment-3.8.yml  environment-3.9.yml  environment-elm.yml
doc/: ply.html
docs/: Makefile  add_to_shell.rst  advanced_events.rst  aliases.rst  appimage.md  appimage.rst  bash_to_xsh.rst  callable_aliases.rst  changelog.rst  cmdhelp.py  comparison.rst  completers.rst  conf.py  contact.rst  containers.rst  contents.rst  contributing.rst  customization.rst  debug.rst  dependencies.rst  developer.rst  development.rst  devguide.rst  do_sphinx.ps1  editors.rst  embedding.rst  env.rst  envvars.jinja2  envvars.rst  envvars.rst.jinja2  error_handling.rst  events.rst  events_tutorial.rst  faq.rst  fixdocselector.py  globbing.rst  guides.rst  history.rst  history_backend.rst  index.rst  (+54 more)
docs/_static/: console_colors.reg  custom.css  numpy_friendly.css_t  readable.css_t  robots.txt  xonsh-demo.webm  xonsh-logo-ascii.txt  xterm_colors.reg
docs/_templates/: index.html  (+2 more)
manual_tests/: readme.rst  test_async.xsh  test_manual_test_folder.py  tst_async_prompt.xsh
news/: 035.rst  1kb.rst  2543-lines-columns.rst  2696-which-next-statement.rst  3036-change-xontrib-autojump.rst  3182-fix-cat-proc-file.rst  3427-fix-vc-prompt-color.rst  3766.rst  4376.rst  4460.rst  4510.rst  4608.rst  4668-fix-autocomplete-suggest.rst  5011.rst  5056.rst  5477.rst  5507.bugfix.rst  5701.rst  5870.bugfix.rst  BOM-bug.rst  COMPLETIONS_CONFIRM.rst  CommandsCache_path_speed.rst  DanielSaunders-patch-1.rst  Fix assigning dictionary to XONSH_STYLE_OVERRIDES variable.rst  PEP263upd.rst  TEMPLATE.rst  THREAD_SUBPROC-win.rst  XONSH_HISTORY_FILE.rst  XONSH_HISTORY_FILE_setting.rst  aaron-sprint-(special-method-printing)-2018.rst  aaron-sprint-2018.rst  abbrevs-set-cursor.rst  abbrevs.rst  abc-warning.rst  abspathy.rst  acreveal.rst  add-api-docs-for-ptk-updator-module.rst  add-api-jobs-module.rst  add-flake8-docstrings.rst  add-history-flush.rst  (+1278 more)
nix/: default.nix  package.nix  unwrapped.nix
recipe/: bld.bat  build.sh  meta.yaml  xonsh_shortcut.json
requirements/: development.txt  docs.txt  tests-35.txt  tests.txt
scripts/: colors.py  run_tests.sh  run_tests.xsh  xon.sh  xonsh  xonsh-cat  xonsh-cat.bat  xonsh.bat  xonsh.ps1
test/: README  lex_literal3.py  yacc_error7.py  yacc_prec1.py
tests/: TODO  TODO.txt  bashrc.sh  batch.bat  conftest.py  sample.xsh  test_aliases.py  test_aliases_click_completer_llm.py  test_aliases_llm.py  test_ansi_colors.py  test_ast.py  test_base_shell.py  test_bash_completers.py  test_bashisms.py  test_builtins.py  test_cli_utils.py  test_codecache.py  test_color_tools.py  test_commands_cache.py  test_completer.py  test_completer_empty_llm.py  test_completer_filter_llm.py  test_completion_context.py  test_contexts.py  test_debug_llm.py  test_deprecated_lazy_modules_llm.py  test_dirstack.py  test_dirstack_unc.py  test_environ.py  test_environ_llm.py  test_events.py  test_events_llm.py  test_execer.py  test_execer_llm.py  test_extra_tools.xsh  test_foreign_shells.py  test_foreign_shells_llm.py  test_history.py  test_history_dummy.py  test_history_json.py  (+66 more)
web_config/: webconfig.py
xompletions/: _xonsh.py  cd.py  django-admin.py  gh.py  git.py  pip.py  python.py  rmdir.py  sudo.py
xonsh/: __init__.py  __main__.py  aliases.py  ansi_colors.py  ast.py  base_shell.py  bg_pkg_resources.py  brace_expansion.py  braceexpand.py  built_ins.py  built_ins.py.rej  cli_utils.py  codecache.py  color_tools.py  commands_cache.py  completer.py  contexts.py  debug.py  diff_history.py  dirstack.py  dumb_shell.py  environ.py  events.py  execer.py  extra_tools.xsh  foreign_shells.py  fs.py  hist.py  history.py  imphooks.py  inspectors.py  jobs.py  jobs_not_implemented.py  jobs_posix.py  jobs_windows.py  jsonutils.py  jupyter_kernel.py  jupyter_shell.py  lazy_imports.py  lazyasd.py  (+39 more)
xontrib/: README  README.rst  abbrevs.py  autojump.py  autovox.py  bashisms.py  coreutils.py  distributed.py  fish_completer.py  free_cwd.py  gitstatus.xsh  jedi.py  jedi.xsh  mpl.py  mplhooks.py  oh-my-xonsh.xsh  pdb.py  prompt_ret_code.py  prompt_ret_code.xsh  sh.py  uncpushd.py  uncpushd_debug.xsh  vox.py  voxapi.py  whole_word_jumping.py  xog.py
(+600 files in other folders)
